--- a/Product/detail.html
+++ b/Product/detail.html
@@ -56,7 +56,7 @@
     <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
     <div class="container-fluid px-4">
-      <a class="navbar-brand d-flex align-items-center" href="/Homepage/homepage.html">
+      <a class="navbar-brand d-flex align-items-center" href="../Homepage/homepage.html">
         <img src="/Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
         <strong class="text-danger">Cupid Shoes</strong>
       </a>
@@ -65,17 +65,17 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/Homepage/homepage.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="shoes.html">Shoes</a></li>
-          <li class="nav-item"><a class="nav-link" href="clothes.html">Clothes</a></li>
-          <li class="nav-item"><a class="nav-link" href="accessories.html">Accessories</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Homepage/homepage.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./shoes.html">Shoes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./clothes.html">Clothes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./accessories.html">Accessories</a></li>
         </ul>
         <div class="d-flex align-items-center gap-3">
           <i class="fas fa-search nav-icon"></i>
-          <a href="/Login/register/register.html" class="nav-icon text-dark">
+          <a href="./Login/register/register.html" class="nav-icon text-dark">
             <i class="fas fa-user"></i>
           </a>
-          <a href="/Product/cart.html" class="nav-icon text-dark">
+          <a href="../Product/cart.html" class="nav-icon text-dark">
             <i class="fas fa-shopping-cart"></i>
           </a>
         </div>
