--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
     <div class="container-fluid px-4">
-      <a class="navbar-brand d-flex align-items-center" href="/Homepage/homepage.html">
+      <a class="navbar-brand d-flex align-items-center" href="./Homepage/homepage.html">
         <img src="/Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
         <strong class="text-danger">Cupid Shoes</strong>
       </a>
@@ -22,17 +22,17 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/Homepage/homepage.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/Product/shoes.html">Shoes</a></li>
-          <li class="nav-item"><a class="nav-link" href="/Product/clothes.html">Clothes</a></li>
-          <li class="nav-item"><a class="nav-link" href="/Product/accessories.html">Accessories</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Homepage/homepage.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Product/shoes.html">Shoes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Product/clothes.html">Clothes</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Product/accessories.html">Accessories</a></li>
         </ul>
         <div class="d-flex align-items-center gap-3">
           <i class="fas fa-search nav-icon"></i>
-          <a href="/Login/register/register.html" class="nav-icon text-dark">
+          <a href="./Login/register/register.html" class="nav-icon text-dark">
             <i class="fas fa-user"></i>
           </a>
-          <a href="/Product/cart.html" class="nav-icon text-dark">
+          <a href="./Product/cart.html" class="nav-icon text-dark">
             <i class="fas fa-shopping-cart"></i>
           </a>
         </div>
@@ -105,7 +105,7 @@
             <img src="https://i.pinimg.com/originals/d6/59/37/d659377a1cf730b60628f149ba012855.jpg" class="card-img-top" alt="Shoes">
             <div class="card-body">
               <h5 class="card-title">Shoes</h5>
-              <a href="/Product/shoes.html" class="btn btn-outline-danger">Explore</a>
+              <a href="./Product/shoes.html" class="btn btn-outline-danger">Explore</a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
             <img src="clothes brand.png" class="card-img-top" alt="Clothes">
             <div class="card-body">
               <h5 class="card-title">Clothes</h5>
-              <a href="/Product/clothes.html" class="btn btn-outline-danger">Explore</a>
+              <a href="./Product/clothes.html" class="btn btn-outline-danger">Explore</a>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
             <img src="accessories brand.png" class="card-img-top" alt="Accessories">
             <div class="card-body">
               <h5 class="card-title">Accessories</h5>
-              <a href="/Product/accessories.html" class="btn btn-outline-danger">Explore</a>
+              <a href="./Product/accessories.html" class="btn btn-outline-danger">Explore</a>
             </div>
           </div>
         </div>
