--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand d-flex align-items-center" href="./Homepage/homepage.html">
-        <img src="/Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
+        <img src="../Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
         <strong class="text-danger">Cupid Shoes</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
