--- a/Product/cart.html
+++ b/Product/cart.html
@@ -63,7 +63,7 @@
         </ul>
         <div class="d-flex align-items-center gap-3">
           <i class="fas fa-search nav-icon"></i>
-          <a href="./Login/register/register.html" class="nav-icon text-dark">
+          <a href="../Login/register/register.html" class="nav-icon text-dark">
             <i class="fas fa-user"></i>
           </a>
           <a href="../Product/cart.html" class="nav-icon text-dark">
