--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
     <div class="container-fluid px-4">
-      <a class="navbar-brand d-flex align-items-center" href="./Homepage/homepage.html">
+      <a class="navbar-brand d-flex align-items-center" href="../Homepage/homepage.html">
         <img src="../Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
         <strong class="text-danger">Cupid Shoes</strong>
       </a>
@@ -22,7 +22,7 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="./Homepage/homepage.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="../Homepage/homepage.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="../Product/shoes.html">Shoes</a></li>
           <li class="nav-item"><a class="nav-link" href="../Product/clothes.html">Clothes</a></li>
           <li class="nav-item"><a class="nav-link" href="../Product/accessories.html">Accessories</a></li>
