--- a/Product/clothes.html
+++ b/Product/clothes.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow-sm sticky-top">
     <div class="container-fluid px-4">
       <a class="navbar-brand d-flex align-items-center" href="../Homepage/homepage.html">
-        <img src="/Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
+        <img src="../Login/register/logo.png" alt="Cupid Logo" width="40" height="40" class="rounded-circle me-2">
         <strong class="text-danger">Cupid Shoes</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
@@ -29,7 +29,7 @@
         </ul>
         <div class="d-flex align-items-center gap-3">
           <i class="fas fa-search nav-icon"></i>
-          <a href="./Login/register/register.html" class="nav-icon text-dark">
+          <a href="../Login/register/register.html" class="nav-icon text-dark">
             <i class="fas fa-user"></i>
           </a>
           <a href="../Product/cart.html" class="nav-icon text-dark">
