--- a/Product/detail.html
+++ b/Product/detail.html
@@ -71,7 +71,7 @@
           href="../Homepage/homepage.html"
         >
           <img
-            src="/Login/register/logo.png"
+            src="../Login/register/logo.png"
             alt="Cupid Logo"
             width="40"
             height="40"
