--- a/Login/register/login.html
+++ b/Login/register/login.html
@@ -24,7 +24,7 @@
       </div>
       <button type="submit" class="btn">Login</button>
       <div class="extra-links">
-        <p>Don't have an account? <a href="../Register/register.html">Register Here</a></p>
+        <p>Don't have an account? <a href="./register.html">Register Here</a></p>
       </div>
     </form>
   </div>
