--- a/Login/register/register.html
+++ b/Login/register/register.html
@@ -45,7 +45,7 @@
       </div>
       <button type="submit" class="btn">Register</button>
       <div class="extra-links">
-        <p>Already have an account? <a href="./Login/register/login.html">Login Here</a></p>
+        <p>Already have an account? <a href="./login.html">Login Here</a></p>
       </div>
     </form>
   </div>
